# Tuga

./: .gitignore  CMakeLists.txt  main.cpp  test.h
src/: attacks.h  bitboard.cpp  bitboard.h  draw.cpp  draw.h  evaluation.cpp  evaluation.h  magic.h  main.cpp  movegen.cpp  movegen.h  movelist.cpp  movelist.h  position.cpp  position.h  search.cpp  search.h  utils.h
src/cpp/: Position.cpp  bitboard.cpp  game.cpp  movegen.cpp  movelist.cpp  utils.cpp
src/h/: Position.h  bitboard.h  game.h  movegen.h  movelist.h  utils.h
